welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:25: error: Unmatched closing brace '}' ignored here
} 
^PictureMono2:27: error: eof expected but '}' found.
}
^